# proposal-normalizer

./: README.md  pyproject.toml
examples/: build_claim_proposal.py
proposal_normalizer/: __init__.py  artifact_binding.py  build_proposal.py  contract_binding.py  mutation_binding.py
tests/: test_artifact_binding.py  test_build_proposal.py  test_normalizer_boundary.py
